--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "moment": "^2.29.3",
     "react": "^18.0.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.0.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +51,11 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "^4.6.3"
   }
 }
