--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.0",
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.0.0",
