--- a/package.json
+++ b/package.json
@@ -3,35 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.7",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.7.0",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "moment": "^2.29.3",
-    "react": "^18.0.0",
+    "browserslist": "^4.21.5",
+    "dotenv": "^16.0.3",
+    "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.29.4",
+    "next": "^12.3.1",
+    "next-i18next": "^6.0.2",
+    "qs": "^6.11.0",
+    "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
-    "react-redux": "^8.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predev": "node src/functions/preBuildScripts/preBuildDev.js",
+    "dev": "next dev",
+    "prebuild": "node src/functions/preBuildScripts/preBuildDev.js",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
@@ -52,13 +57,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "18.8.5",
+    "@types/qs": "^6.9.7",
+    "@types/react-dom": "^18.0.8",
     "@types/react-helmet": "^6.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "typescript": "^4.6.3"
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^4.8.4"
   }
 }
